# alpha

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  webhook.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: build_docker_image.yml
app/: core.py  logger.py  settings.py
app/clients/bb/: __init__.py  client.py  message.py
app/models/bb/: api.py  message.py  webhook.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
